--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack": "^4.35.2"
   },
   "dependencies": {
-    "aws-sdk": "^2.639.0"
+    "aws-sdk": "^2.639.0",
+    "kafkajs": "^1.15.0"
   }
 }
